# workspace

./: .gitignore  Cargo.toml  README.md  result  shell.nix  sqlite.db
.sqlx/: query-2a6d9557c94c40b4e79d430564e6ad7babe356884aefa8b5c6e85811d0db105e.json  query-52f926b4bbc72780fb441d85de66b34850b81a036a05047b027a45ab8aabe67e.json  query-a9bf420a25299a890afb2eaed37d1d319b95621fe6ba11267fb004be6aa5da9a.json  query-b2ee4efaae96e4e701136419ecddd4683b1749889fff303638c4dbe61f05e1d2.json  query-bb43b4da9cbd5e27335fb9837919fe4cd21808ebd014501667fc094dac34e4e2.json  query-f568ad1ef5a7a694c062c5c256ffb7100ae4a4d2a3d238519b97af4be294cee0.json  query-fdd63ac0ed550bc3c4a3d3da829c4ca6991d4bc847b2116cab90ea732cad9020.json
migrations/: 20240126105605_initial.down.sql  20240126105605_initial.up.sql  20240130101231_legacy-move-data.down.sql  20240130101231_legacy-move-data.up.sql
src/: database.rs  lib.rs  main.rs
src/cli/: add.rs  list.rs  mod.rs  nix.rs  open.rs  rm.rs
src/cli/utils/: mod.rs  validate_name.rs
src/nix/: mod.rs  template.rs
src/nix/c/: flake.nix  mod.rs
src/nix/javascript/: flake.nix  mod.rs
src/nix/rust/: flake.nix  mod.rs  shell.nix
src/paths/: legacy.rs
