[package]
name = "workspace"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
homedir = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
